force-app/main/default/objects/ComboProduct__c/ComboProduct__c.object-meta.xml
<CustomObject>
    <label>Combo Product</label>
    <nameField>
        <label>Combo Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Combo Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>