force-app/main/default/objects/ComboProduct__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF ( Unlimited__c = TRUE, TRUE, IF( ValidEndDate__c  &lt;=  TODAY(), FALSE,TRUE ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>