force-app/main/default/objects/ComboProduct__c/fields/Unlimited__c.field-meta.xml
<CustomField>
    <fullName>Unlimited__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Unlimited</label>
    <type>Checkbox</type>
</CustomField>