force-app/main/default/objects/ComboProduct__c/fields/ValidEndDate__c.field-meta.xml
<CustomField>
    <fullName>ValidEndDate__c</fullName>
    <label>Valid End Date</label>
    <type>Date</type>
</CustomField>