force-app/main/default/objects/ComboProduct__c/fields/ValidStartDate__c.field-meta.xml
<CustomField>
    <fullName>ValidStartDate__c</fullName>
    <label>Valid Start Date</label>
    <type>Date</type>
</CustomField>