force-app/main/default/objects/ComboProduct__c/validationRules/ValidDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
Unlimited__c = FALSE,
 ValidEndDate__c &lt;  ValidStartDate__c )</errorConditionFormula>
    <errorDisplayField>ValidEndDate__c</errorDisplayField>
    <errorMessage>Valid End Date must be greater than Valid Start Date</errorMessage>
</ValidationRule>